--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,15 @@
   --icon-size: 40px; /* Controls the overall size */
   --stroke-color: #0f117a; /* Line color */
   --stroke-width: 4px;
+  /* My really --> custom variables */
+  --column-gap: 1rem;
+  --gutter-y: 1.5rem;
+  --gutter-x: var(--column-gap);
+  --column-count: 6;
+  --column-width: 1fr;
+  --grid-areas: 'all-columns-start' repeat(var(--column-count), var(--column-width)) 'all-columns-end';
+  --border-radius: 1rem;
+  --grid-areas: "c1 c2 c3 c4 c5 c6";
 }
 
 @media (prefers-color-scheme: dark) {
